--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,9 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'org.parceler:parceler-api:1.1.12'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
