--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ version: 2
    build:
      docker:
        - image: circleci/ruby:2.4.1
+       jobs:
+          - vinothinir/MyTaxi
      steps:
        - checkout
        - run: echo "A first hello"
