--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,9 @@ jobs:
        name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
       command: sudo chmod +x ./gradlew
 
-      
-         # name: Download Dependencies
-         # command: ./gradlew androidDependencies
+     - run:
+         name: Download Dependencies
+         command: ./gradlew androidDependencies
       - save_cache:
           paths:
             - ~/.gradle
